# sandbox

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
shaders/: borders.frag  borders.vert  crosshair.frag  cube.frag  cube.vert  grid.frag  simple.frag  simple.vert
src/: glad.c  main.cpp
src/Blocks/: blocks.cpp  blocks.h
src/Camera/: camera.cpp  camera.h  main.cpp  main.h
src/Chunk/: chunk.cpp  chunk.h  main.cpp  main.h
src/Common/: common.h  main.h
src/Debugger/: debugger.cpp  debugger.h  main.cpp  main.h
src/Player/: main.h
src/Shaders/: main.cpp  main.h  shaders.cpp  shaders.h
src/Structures/: structures.cpp  structures.h
src/Texture/: main.cpp  main.h  texture.cpp  texture.h
src/World/: main.cpp  main.h  world.cpp  world.h
textures/backup/: dirt.jpg.bak2  dirt.jpg.bak3
